argocd/applications/argo-workflows/ingressroute-private.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-workflows-private
  namespace: argo-workflows
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`workflows.k8s.proompteng.ai`)
      services:
        - name: argo-workflows-server
          port: 2746
  tls:
    secretName: wildcard-k8s-proompteng-ai-tls
